# Zero

./: .env.example  .gitignore  README.md  Telic.bat  Test Spreadsheet.csv  aegis-1-proposal.md  build-desktop.bat  setup.bat  test_harness_burnin.py  test_harness_control_plane.py  test_harness_framework.py  test_harness_runner_integration.py
apex/: .env.example  Apex.bat  Apex.ps1  DESKTOP-BUILD.md  Expense Report - March 2026.csv  README.md  Telic.bat  Telic.ps1  __init__.py  apex-server.spec  apex_engine.py  apex_engine_v2.py  app_discovery.py  bench_performance.py  cli.py  demo.py  index.py  intent_router.py  llm_factory.py  local_files.py  nudge_engine.py  package-lock.json  package.json  pyproject.toml  quality_gate_cli.py  react_agent.py  requirements.txt  routines.py  run.sh  semantic_search.py  server.py  server_state.py  sessions.py  setup.bat  setup.sh  sync_engine.py  test_all_primitives.py  test_calendar_debug.py  test_connector_infrastructure.py  test_connector_scenarios.py  (+22 more)
apex/cloud/: README.md  __init__.py  broker.py  proxy.py  vercel.json
apex/connectors/: __init__.py  _template_oauth.py  airtable.py  base.py  broker_client.py  calendar.py  contacts.py  credentials.py  desktop_notify.py  devtools.py  discord.py  drive.py  dropbox.py  ebay.py  github.py  gmail.py  google_auth.py  google_photos.py  google_sheets.py  google_slides.py  hubspot.py  jira.py  linear.py  linkedin.py  microsoft_auth.py  microsoft_contacts.py  microsoft_excel.py  microsoft_graph.py  microsoft_powerpoint.py  microsoft_todo.py  news.py  notion.py  oauth_flow.py  onedrive.py  onenote.py  outlook.py  outlook_calendar.py  reddit.py  registry.py  resolver.py  (+15 more)
apex/docs/: ARCHITECTURE.md  ASSESSMENT.md  COGNITIVE_ARCHITECTURE.md  CONNECTOR-BUILDOUT-PLAN.md  DEV-SETUP.md  EARTH_SHATTERING.md  EXECUTION-8W-WORLD-CLASS.md  HARNESS-OPERATIONS-RUNBOOK.md  HARNESS-SPRINT-2DAY.md  INTEGRATION_PLATFORM.md  MVP-ROADMAP.md  OAUTH_SETUP.md  PHASE7-ARCHITECTURE.md  PRD.md  SCENARIO-HARNESS.md  STRATEGIC-PLAYBOOK.md  TEAM-EXECUTION-REPORT.md
apex/harness/: __init__.py  control_plane.py  diagnosis.py  repair_runner.py
apex/intelligence/: __init__.py  cross_service.py  pattern_recognition.py  preference_learning.py  proactive.py  proactive_monitor.py  semantic_memory.py
apex/orchestration/: __init__.py  artifact_ledger.py  benchmark_runner.py  capability_graph.py  contracts.py  eval_store.py  evaluator.py  primitive_audit.py  state_machine.py  verifier.py
apex/primitives/: __init__.py  base.py  communication.py  creators.py  data.py  lifestyle.py  productivity.py  services.py  skills.py  system.py  web.py
apex/routes/: __init__.py  dashboard.py  intelligence.py  nudges.py  oauth.py  orchestration.py  react.py  routines.py
apex/scenarios/: regression_scenarios.json
apex/spikes/: spike-001-llm-file-planning.md  spike_llm_planning.py
apex/src-tauri/: Cargo.toml  tauri.conf.json
(+55 files in other folders)
