[package]
name = "apex"
version = "0.1.0"
description = "Privacy-First Personal AI Assistant"
authors = ["rob637"]
license = "MIT"
repository = "https://github.com/rob637/Zero"
edition = "2021"

[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[dependencies]
tauri = { version = "1.6", features = ["shell-open", "system-tray", "process-command-api"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
