[package]
name = "telic"
version = "0.1.0"
description = "Telic - The AI Operating System with Purpose"
authors = ["rob637"]
license = "MIT"
repository = "https://github.com/rob637/Zero"
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-shell = "2"
tauri-plugin-process = "2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
